yml/HostMapped/hostMapped.service.yml
apiVersion: v1
kind: Service
metadata:
  name: host-mapped-service
  namespace: pv-demo
spec:
  selector:
    app: host-mapped-site
  ports:
    - protocol: TCP
      port: 80
