yml/HostMapped/hostMapped.ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: pv-demo
  name: host-mapped-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: host-mapped.192.168.2.101.nip.io
    http:
      paths:
      - path: / 
        pathType: ImplementationSpecific       
        backend:
          service:
            name: host-mapped-service
            port: 
              number: 80
